--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,9 @@
     <!-- 监听系统开机权限 -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- Android四大组件注册：Activity，Broadcast Receiver，Service，Content Provider -->
+    <!-- Android四大组件注册：Activity，Broadcast Receiver，Service，Content Provider -->
     <application
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -187,6 +185,12 @@
         <activity
             android:name="com.example.DataStore.SQLite.SQLiteDemo"
             android:label="@string/title_sqlite_demo">
+        </activity>
+
+        <!-- LitePal Demo -->
+        <activity
+            android:name="com.example.DataStore.LitePal.LitePalDemo"
+            android:label="@string/title_litepal_demo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
