--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <!-- 手机震动权限 -->
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <!-- 读写SD卡内容权限（另外在4.4系统之前访问应用关联目录也需要申请此权限） -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <!-- Android四大组件注册：Activity，Broadcast Receiver，Service，Content Provider -->
     <application
@@ -222,16 +224,31 @@
             android:exported="true">
         </provider>
 
-        <!-- 简单Notification（通知）-->
+        <!-- Notification（通知）-->
         <activity
-            android:name="com.example.Notification.NotificationDemo"
+            android:name="com.example.MultiMedia.NotificationDemo"
             android:label="@string/title_notification_demo">
+        </activity>
+
+        <!-- Camera 调用摄像头拍照 -->
+        <activity
+            android:name="com.example.MultiMedia.CameraAlbum"
+            android:label="@string/title_camera_album">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.helloworld.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <!-- 指定Uri的共享路径 -->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
 
     </application>
 
