--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'org.litepal.android:core:1.5.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
 }
