--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -263,6 +263,18 @@
         <activity
             android:name="com.example.HttpConnection.WebViewDemo"
             android:label="@string/title_web_view_demo">
+        </activity>
+
+        <!-- 使用HttpURLConnection发送HTTP请求 -->
+        <activity
+            android:name="com.example.HttpConnection.HttpURLConnectionDemo"
+            android:label="@string/title_http_url_connection">
+        </activity>
+
+        <!-- 使用OkHttp发送HTTP请求 -->
+        <activity
+            android:name="com.example.HttpConnection.OkHttpDemo"
+            android:label="@string/title_ok_http">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
